--- a/pages/others/others.wxml
+++ b/pages/others/others.wxml
@@ -1,2 +1,2 @@
 <view style='height:5px;'></view>
-<c-driver bind:pageturn="turn" data-driver="{{driver}}"/>
+<c-driver bind:pageturn="turn" data-driver="{{driver}}" bind:callphone="callphone"/>
