--- a/pages/driver_register/driver_register.wxml
+++ b/pages/driver_register/driver_register.wxml
@@ -19,16 +19,29 @@
     <view style="height:40px;"></view>
     <swiper-item>
       <view class='choose'>车主姓名： <input name='driver_name'></input></view>
-      <view class='choose'>车主性别： <input name='driver_sex'></input></view>
+      <view style="height:2rpx;"></view>
       <view class='choose'>手机号码： <input name='driver_phone'></input></view>
+      <view style="height:2rpx;"></view>
+      <view class='choose'>车主性别：
+        <radio-group class="radio-group" bindchange="radioChange">
+          <label class="radio" wx:for="{{driver_sex}}">
+            <radio value="{{item.name}}" checked="{{item.checked}}"/>{{item.value}}
+            </label>
+        </radio-group>
+      </view>
+      <view style="height:2rpx;"></view>
+      
       <view class='choose'>常在地址： <input name='driver_address' placeholder="只需给出镇，村名"></input></view>
       <view style="height:60px;"></view>
       <button data-current = "1" bindtap='checkCurrent' type="primary">下一步</button>
     </swiper-item>
     <swiper-item>
       <view class='choose'>车牌号： <input name='car_number'></input></view>
+      <view style="height:2rpx;"></view>
       <view class='choose'>汽车颜色： <input name='car_color'></input></view>
+      <view style="height:2rpx;"></view>
       <view class='choose'>车辆注册日期： <input name='car_date'></input></view>
+      <view style="height:2rpx;"></view>
       <view class='choose'>汽车车型：
         <radio-group class="radio-group" bindchange="radioChange">
           <label class="radio" wx:for="{{car_type_items}}">
@@ -36,17 +49,21 @@
             </label>
         </radio-group>
       </view>
+      <view style="height:20rpx;"></view>
       <view class='choose_new'>常跑路线：
-        <radio-group class="radio-group" bindchange="radioChange" style="font-size:0.9em;padding-top:10rpx;">
+        <radio-group class="radio-group radio-group-new" bindchange="radioChange" style="font-size:0.9em;padding-top:10rpx;">
           <label class="radio" wx:for="{{route}}">
-            <radio value="{{item.name}}" checked="{{item.checked}}"/>{{item.value}}
+            <radio value="{{item.name}}" checked="{{item.checked}}" class="radio"/>{{item.value}}
             </label>
         </radio-group>
       </view>
       <view style="height:40px;"></view>
-      <button data-current = "2" bindtap='checkCurrent' type="primary">下一步</button>
+      <view class="button">
+        <button data-current = "0" bindtap='checkCurrent' type="primary" class="btn">上一步</button>
+        <button data-current = "2" bindtap='checkCurrent' type="primary" class="btn">下一步</button>
+      </view>
+      
       <view style="height:20px;"></view>
-      <button data-current = "0" bindtap='checkCurrent' type="primary" >上一步</button>
     </swiper-item>
     <swiper-item>
       <view class='all_choose'>
@@ -84,9 +101,13 @@
         </view>
       </view>
 
-      <button data-current = "1" bindtap='checkCurrent' type="primary">上一步</button>
+      
       <view style="height:25px;"></view>
-      <button type="primary" form-type="submit">提交审核</button>
+      
+      <view class="button">
+        <button data-current = "1" bindtap='checkCurrent' type="primary" class="btn">上一步</button>
+        <button type="primary" form-type="submit" class="btn">提交审核</button>
+      </view>
     </swiper-item>
   </swiper>
 </form>
