--- a/pages/driver_details/driver_details.wxml
+++ b/pages/driver_details/driver_details.wxml
@@ -45,7 +45,7 @@
 
 <view class='flex-wrp-row item'>
   <view class='item-left flex-wrp-row'>
-    <text class='text' style="font-size:0.9em;font-weight:lighter;">详细地址</text>
+    <text class='text' style="font-size:31rpx;font-weight:lighter;">详细地址</text>
   </view>
 </view>
 <view style="height:1rpx;"></view>
@@ -60,7 +60,7 @@
 
 <view class='flex-wrp ite'>
   <view class='item-lef flex-wrp'>
-    <text class='text' style="font-size:0.9em;font-weight:lighter;">车主介绍</text>
+    <text class='text' style="font-size:31rpx;font-weight:lighter;">车主介绍</text>
   </view>
 </view>
 <view style="height:1rpx;"></view>
@@ -74,7 +74,7 @@
 
 <view class='flex-wrp ite'>
   <view class='item-lef flex-wrp'>
-    <text class='text' style="font-size:0.9em;font-weight:lighter;">相关图片</text>
+    <text class='text' style="font-size:31rpx;font-weight:lighter;">相关图片</text>
   </view>
 </view>
 <view style="height:1rpx;"></view>
