--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -39,7 +39,7 @@ page{
   padding-top: 15rpx;
   flex: 1;
   text-align: center;
-  font-size: 0.8em;
+  font-size: 30rpx;
 }
 
 .swiper2{width: 100%;}
@@ -49,7 +49,7 @@ page{
   display: flex;
   flex-direction: column;
   padding: 20rpx 10rpx ;
-  font-size: 12pt;
+  font-size: 30rpx;
   background: white;
   margin-bottom: 12rpx;
 }
@@ -59,7 +59,7 @@ page{
   padding-left: 10rpx;
   padding-bottom: 12rpx;
   font-weight: lighter;
-  font-size: 0.9em;
+  font-size: 30rpx;
   display: flex;
   flex-direction: row;
 }
@@ -74,7 +74,7 @@ page{
 }
 .right{
   width: 30%;
-  font-size: 1.2em;
+  font-size: 35rpx;
   color: rgb(250,80,10);
 }
 .confirm{
