--- a/pages/market/market.wxml
+++ b/pages/market/market.wxml
@@ -15,11 +15,11 @@
           <view class='item_type'>奥迪 奔驰 宝马</view>
           <view class="phone">
             <image class="driver_phone_img" src="../../img/phone.png"></image>
-            <text style="font-size:0.8em;">15983373359</text>
+            <text style="font-size:30rpx;">15983373359</text>
           </view>
           <view class="phone">
             <image class="driver_phone_img" src="../../img/money.png"></image>
-            <text style="font-size:0.9em;color:red;">三千元左右</text>
+            <text style="font-size:31rpx;color:red;">三千元左右</text>
           </view> 
         </view>
       </view>
@@ -41,11 +41,11 @@
           <view class='item_type'>三轮车发动机250</view>
           <view class="phone">
             <image class="driver_phone_img" src="../../img/phone.png"></image>
-            <text style="font-size:0.8em;">15983373359</text>
+            <text style="font-size:31rpx;">15983373359</text>
           </view>
           <view class="phone">
             <image class="driver_phone_img" src="../../img/money.png"></image>
-            <text style="font-size:0.9em;color:red;">三千元左右</text>
+            <text style="font-size:31rpx;color:red;">三千元左右</text>
           </view> 
         </view>
       </view>
