--- a/pages/market/market.wxss
+++ b/pages/market/market.wxss
@@ -31,13 +31,13 @@ page{
   height: 100%;
   display: flex;
   flex-direction: column;
-  font-size: 0.9em;
+  font-size: 31rpx;
 }
 .item_type{
   padding-top: 20rpx;
   width: 100%;
   height: 36%;
-  font-size: 1em;
+  font-size:33rpx;
 }
 .phone{
   width: 100%;
