--- a/pages/partWorkDetail/partWorkDetail.wxss
+++ b/pages/partWorkDetail/partWorkDetail.wxss
@@ -13,7 +13,7 @@ page{
 .title{
   height: 50%;
   width: 100%;
-  font-size: 1.3em;
+  font-size: 40rpx;
   font-weight: bold;
 }
 .others{
@@ -25,7 +25,7 @@ page{
 .tips{
   height: 20%;
   width: 100%;
-  font-size: 0.8em;
+  font-size: 30rpx;
   color: rgb(244, 140, 20);
 }
 .wage{
@@ -37,13 +37,13 @@ page{
   padding: 10rpx 0;
   width: 49%;
   height: 100%;
-  font-size: 0.8em;
+  font-size: 30rpx;
   font-weight: lighter;
 }
 .date{
   width: 26%;
   height: 100%;
-  font-size: 0.9em;
+  font-size: 31rpx;
 }
 
 .body{
@@ -62,11 +62,11 @@ page{
 .bigTitle{
   width: 100%;
   height: 60rpx;
-  font-size: 1.1em;
+  font-size: 35rpx;
   color: rgb(255, 40, 208);
 }
 .text{
   margin: 3rpx;
   font-weight: lighter;
-  font-size: 0.9em;
+  font-size: 31rpx;
 }
