--- a/pages/product_details/product_details.wxss
+++ b/pages/product_details/product_details.wxss
@@ -14,7 +14,7 @@
   height: 50%;
   display: flex;
   align-items: center;
-  font-size: 1.1em;
+  font-size: 35rpx;
 }
 .price_date{
   width: 100%;
@@ -26,7 +26,7 @@
 .price{
   width: 55%;
   height: 100%;
-  font-size: 0.9em;
+  font-size: 31rpx;
   padding-left: 10rpx;
 }
 .information{
@@ -54,7 +54,7 @@
   padding: 10rpx 15rpx;
 }
 .up{
-  font-size:0.8em;
+  font-size:30rpx;
   font-weight: lighter;
   display: flex;
   align-items: center;
