--- a/pages/apply_job/apply_job.wxml
+++ b/pages/apply_job/apply_job.wxml
@@ -5,7 +5,7 @@
     <view class='choose'>联系电话： <input name='phone'></input></view>
   </view>
   <view class='requaire'>需求简述：</view>
-  <textarea placeholder='自己的技能和工作经历' class='remark' name='remarks'></textarea>
+  <textarea class='remark' name='remarks'></textarea>
   <view style="height:60px;"></view>
   <button form-type='submit' type='primary'>提 交</button> 
 </form> 
