--- a/components/c-driver/c-driver.wxss
+++ b/components/c-driver/c-driver.wxss
@@ -15,19 +15,22 @@
   height: 60%;
 }
 .driver_img{
-  width: 15%;
+  width: 20%;
   height: 100%;
   padding: 18rpx 0 0 13rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .d_img{
-  width: 60%;
-  height: 70%;
-  border-radius: 40rpx;
+  width: 80%;
+  height: 90%;
+  border-radius: 50rpx;
 }
 .driver_body{
   display: flex;
   flex-direction: column;
-  width: 70%;
+  width: 65%;
   height: 100%;
 }
 .class{
