--- a/pages/driver_details/driver_details.wxml
+++ b/pages/driver_details/driver_details.wxml
@@ -88,7 +88,7 @@
 
 
 <view style="height:80rpx;"></view>
-<c-tabbar bind:callphone="callphone" bind:addfavor="addfavorite" bind:toinform="toinform" bind:toshare="toshare" class="addfavor"/>
+<c-tabbar bind:tochat="tochat" bind:callphone="callphone" bind:addfavor="addfavorite" bind:toinform="toinform" bind:toshare="toshare" class="addfavor"/>
 
 
 
